[tool.poetry]
name = "invoke-poetry"
version = "0.1.0"
description = "A set of tools that make invoke tasks interact better with poetry."
authors = ["Carlo De Pieri <depieri.carlo@gmail.com>"]
license = "GPL3.0"
readme = 'README.md'
repository = "https://github.com/CarloDePieri/invoke-poetry"
homepage = "https://github.com/CarloDePieri/invoke-poetry"

packages = [
  { include = "invoke_poetry" }
]

keywords = ["python", "invoke", "poetry", "build"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "^3.8.1"
invoke = "^2.0.0"
toml = "^0.10.2"
poetry = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
isort = "^5.12.0"
black = "^23.1.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
tomli = "^2.0.1"
pydevd-pycharm = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
]
disable_error_code = [
  "misc"
]
show_error_codes = "True"
warn_unused_ignores = "True"
strict = "True"

[[tool.mypy.overrides]]
module = "invoke.*"
ignore_missing_imports = "True"
