[tool.poetry]
name = "invoke-poetry"
version = "0.1.0"
description = "A set of tools that make invoke tasks interact better with poetry."
authors = ["Carlo De Pieri <depieri.carlo@gmail.com>"]
license = "GPL3.0"
readme = 'README.md'
repository = "https://github.com/CarloDePieri/invoke-poetry"
homepage = "https://github.com/CarloDePieri/invoke-poetry"

packages = [
  { include = "invoke_poetry" }
]

keywords = ["python", "invoke", "poetry", "build"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "^3.8.1"
invoke = "^2.1.3"
toml = "^0.10.2"
poetry = "^1.5.1"
typing-extensions = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
tomli = "^2.0.1"
pydevd-pycharm = "^232.7295.8"

[tool.poetry.group.dev.dependencies]
coveralls = "^3.3.1"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
#
[tool.mypy]
enable_error_code = [
  "ignore-without-code",
]
show_error_codes = "True"
warn_unused_ignores = "True"
strict = "True"
exclude = [
  "test_.*.py$", # don't type check tests
  "conftest.py", # don't type check tests
]
